# virasam-app

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature.md  Refactoring.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md  Feature Request.md  Refactoring.md
virasam-app/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Report.md  requirements-dev.txt  requirements.txt
virasam-app/backend/: categorization.py  database.py  swecha_api.py
virasam-app/frontend/: app.py  test_dual_models.py
virasam-app/frontend/pages/: community.py  contribute.py  folk.py  history.py  recipes.py  search.py  tradition.py
virasam-app/frontend/utils/: ai_fallback.py  auth.py  swecha_search.py  translation.py  users.json
